# multi-agent-navigation

./: .gitignore  README.md  inference.py  pyproject.toml  train_mappo.py
configs/: basic_env.yaml  bottleneck.yaml  circle_marl.yaml  four_crossing.yaml  hallway.yaml  moving_env.yaml  moving_env_marl.yaml  two_crossing.yaml
nav/: config_models.py  environment.py  live_renderer.py  obstacles.py  ray_intersection.py  renderer_models.py  utils.py
networks/: actor_critic_network.py
rl/: distributions.py  mappo.py  rollout_buffer_with_states.py
